let's remove loom bits, we can discuss later about this using another PR.